# syshack

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.h.in  sys-hack
include/: character.h  level.h  llist.h  main.h  misc.h  ncurses.h
src/: character.c  level.c  llist.c  main.c
